Corrected top spacing

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -6,13 +6,13 @@
     background:no-repeat;
     background-image:linear-gradient(to bottom,#12100e 0%,#2b4162 100%);
     color:#fff;
-    height:100%;
+    height:100vh;
   }
   
   h1 {
     font-family:'Cabin Condensed';
     font-size:2.5em;
-    margin-top:20px;
+    margin-top:70px;
     text-align:center;
   }
   
